# stupid_yarp_tricks

./: CMakeLists.txt  README.md  RunReadWrite.cpp  main.cpp  read.cpp  yarp_write_completion
